fix: blur window on Withdraw overlaps dropdown

--- a/web/src/components/Blur/Blur.pcss
+++ b/web/src/components/Blur/Blur.pcss
@@ -9,7 +9,7 @@
   position: absolute;
   right: -4px;
   top: -2px;
-  z-index: 10000;
+  z-index: calc(var(--z-index-dropdown) - 1);
 
   @media screen and (max-width: 768px) {
     bottom: 0;
