--- a/web/src/index.pcss
+++ b/web/src/index.pcss
@@ -31,6 +31,7 @@
   --mobile-footer-height: calc(52px + max(env(safe-area-inset-bottom) - 15px, 0px));
   --mobile-bottom-buttons-height: 54px;
   --control-height: 48px;
+  --z-index-dropdown: 10000;
 }
 
 #root {
